--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <div class="main">
         <div id="time" class="time">07:00</div>
         <div class="greeting">Hello, Junsoo!</div>
-        <div class="todo">아침명상</div>
-        <div class="todo">운동하기</div>
-        <div class="todo">독서하기</div>
+        <div class="todo">○아침명상</div>
+        <div class="todo">○운동하기</div>
+        <div class="todo">○독서하기</div>
     </div>
 
     <div class="quote">
