--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             font-size: 50px;
         }
 
+        .greeting2 {
+            font-size: 30px;
+        }
+
         .todo {
             font-size: 30px;
         }
@@ -73,9 +77,13 @@
     <div class="main">
         <div id="time" class="time">07:00</div>
         <div class="greeting">Hello, Junsoo!</div>
-        <div class="todo">○아침명상</div>
-        <div class="todo">○운동하기</div>
-        <div class="todo">○독서하기</div>
+        <div class="greeting2">What's your goal today?</div>
+        <p></p>
+        <div class="todo">ㅇ아침명상</div>
+        <p></p>
+        <div class="todo">ㅇ운동하기</div>
+        <p></p>
+        <div class="todo">ㅇ독서하기</div>
     </div>
 
     <div class="quote">
