--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         .greeting2 {
-            font-size: 30px;
+            font-size: 50px;
         }
 
         .todo {
@@ -79,6 +79,7 @@
         <div class="greeting">Hello, Junsoo!</div>
         <div class="greeting2">What's your goal today?</div>
         <h4></h4>
+        <p>must to do</p>
         <div class="todo">ㅇ아침명상</div>
         <p></p>
         <div class="todo">ㅇ운동하기</div>
