--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
         }
 
         .time {
-            font-size: 80px;
+            font-size: 5rem;
             font-weight: bold;
         }
 
         .greeting {
-            font-size: 50px;
+            font-size: 3.2rem;
         }
 
         .greeting2 {
-            font-size: 50px;
+            font-size: 3.2rem;
         }
 
         .todo {
@@ -42,7 +42,7 @@
         }
 
         .author {
-            font-size: 25px;
+            font-size: 1.6rem;
             font-style: italic;
         }
 
@@ -65,7 +65,14 @@
             align-items: center;
             justify-content: center;
         }
+        
+        @media (max-width:500px) {
+  
 
+  main {
+    background-image: url(https://static01.nyt.com/images/2022/08/14/travel/travel-budapest-promo-5/travel-budapest-promo-5-mediumSquareAt3X.jpg);
+    font-size: 1.25rem;
+  }
 
     </style>
 
