--- a/index.html
+++ b/index.html
@@ -27,18 +27,22 @@
         .time {
             font-size: 5rem;
             font-weight: bold;
+            text-align: center;
         }
 
         .greeting {
             font-size: 3.2rem;
+            text-align: center;
         }
 
         .greeting2 {
             font-size: 3.2rem;
+            text-align: center;
         }
 
         .todo {
             font-size: 30px;
+            text-align: center;
         }
 
         .author {
