--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         .todo {
             font-size: 30px;
             text-align: center;
+            border-style: solid;
+            border-color: white;
+            border-width: 0.32rem;
+            padding-top: 0.07rem;
         }
 
         .author {
