--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
             text-align: center;
             border-style: solid;
             border-color: white;
-            border-width: 0.32rem;
-            padding-top: 0.07rem;
+            border-width: 0.2rem;
         }
 
         .author {
@@ -93,13 +92,11 @@
         <div id="time" class="time">07:00</div>
         <div class="greeting">Hello, Junsoo!</div>
         <div class="greeting2">What's your goal today?</div>
-        <h4></h4>
-        <p>must to do</p>
-        <div class="todo">ㅇ아침명상</div>
-        <p></p>
-        <div class="todo">ㅇ운동하기</div>
-        <p></p>
-        <div class="todo">ㅇ독서하기</div>
+        <div class="musttodo">Must To Do
+        <p>ㅇ아침명상</p>
+        <p>ㅇ운동하기</p>
+        <p>ㅇ독서하기</p>
+        </div>
     </div>
 
     <div class="quote">
