--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             border-style: solid;
             border-color: white;
             border-width: 0.2rem;
+            margin-top: 3.1rem;
         }
 
         .author {
@@ -92,7 +93,7 @@
         <div id="time" class="time">07:00</div>
         <div class="greeting">Hello, Junsoo!</div>
         <div class="greeting2">What's your goal today?</div>
-        <div class="musttodo">Must To Do
+        <div class="todo">Must To Do
         <p>ㅇ아침명상</p>
         <p>ㅇ운동하기</p>
         <p>ㅇ독서하기</p>
