--- a/index.html
+++ b/index.html
@@ -28,23 +28,34 @@
       font-size: 5rem;
       font-weight: bold;
       text-align: center;
+      margin-right: 1.25rem;
     }
 
     .greeting {
       font-size: 3.2rem;
       text-align: center;
+      margin-right: 2.18rem;
     }
 
     .greeting2 {
       font-size: 3.2rem;
       text-align: center;
+      margin-right: 2.18rem;
     }
 
     .todo {
-      font-size: 30px;
+      /* font-size: 30px; */
       text-align: center;
       margin-top: 50px;
+      border-style: solid;
+      border-color: white;
+      border-width: 3px;
+      padding-left: 1.5rem;
+      padding-right: 1.5rem;
+      margin-right: 2.18rem;
     }
+
+    h1 {}
 
     .thing {
       text-align: center;
@@ -101,8 +112,8 @@
     <div id="time" class="time">07:00</div>
     <div class="greeting">Hello, Junsoo!</div>
     <div class="greeting2">What's your goal today?</div>
-    <div class="todo">Must To Do</div>
-    <div class="thing">
+    <div class="todo">
+      <h1>Must To Do</h1>
       <h4>ㅇ침상정리 </h4>
       <h4>ㅇ아침명상 </h4>
       <h4>ㅇ운동 </h4>
