--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
         background-image: url(https://static01.nyt.com/images/2022/08/14/travel/travel-budapest-promo-5/travel-budapest-promo-5-mediumSquareAt3X.jpg);
         font-size: 1.25rem;
       }
+
+      .time{
+        margin-top:20px;
+      }
+      .quote{
+        margin-top:20px;
   </style>
 
   <script>
