--- a/index.html
+++ b/index.html
@@ -153,11 +153,12 @@
         margin-right: 0.5rem;
         width: 100vw;
         height: 30vh;
+        margin-bottom: 1rem;
       }
 
       .quote {
 
-        text-align: center;
+        text-align: center;}
   </style>
 
   <script>
