--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       .time {
         margin-top: 3.5rem;
         text-align: center;
-        margin-left: 1.875rem;
+        /*margin-left: 1.875rem;*/
         /*font-size: 3rem;*/
       }
 
@@ -153,7 +153,7 @@
         margin-right: 0.5rem;
         width: 100vw;
         height: 30vh;
-        margin-bottom: 1rem;
+        margin-bottom: 1.5rem;
       }
 
       .quote {
