--- a/index.html
+++ b/index.html
@@ -131,20 +131,20 @@
       .time {
         margin-top: 3.5rem;
         text-align: center;
-        /*margin-left: 1.875rem;*/
+        margin-right: 1.875rem;
         /*font-size: 3rem;*/
       }
 
       .greeting {
         text-align: center;
         margin-left: 1.875rem;
-        font-size: 3rem;
+        font-size: 2.9rem;
       }
 
       .greeting2 {
         text-align: center;
         margin-left: 1.875rem;
-        font-size: 3rem;
+        font-size: 2.9rem;
       }
 
       .contents {
@@ -153,7 +153,7 @@
         margin-right: 0.5rem;
         width: 100vw;
         height: 30vh;
-        margin-bottom: 1.5rem;
+        margin-bottom: 2rem;
       }
 
       .quote {
